--- a/iphone/Maps/ru.lproj/Localizable.strings
+++ b/iphone/Maps/ru.lproj/Localizable.strings
@@ -1791,3 +1791,5 @@
 
 /* january */
 "whatsnew_font_size_text" = "Названия объектов на карте теперь можно сделать крупнее.";
+
+"skip" = "Пропустить";
