--- a/iphone/Maps/tr.lproj/Localizable.strings
+++ b/iphone/Maps/tr.lproj/Localizable.strings
@@ -1791,3 +1791,5 @@
 
 /* january */
 "whatsnew_font_size_text" = "Harita üzerindeki etiketler daha büyük hale getirilebilir.";
+
+"skip" = "Skip";
