--- a/iphone/Maps/ar.lproj/Localizable.strings
+++ b/iphone/Maps/ar.lproj/Localizable.strings
@@ -1791,3 +1791,6 @@
 
 /* january */
 "whatsnew_font_size_text" = "يمكن جعل التسميات على الخريطة أكبر.";
+
+/* "Translation is no needed, because it's a company name" */
+"uber" = "Uber";
