--- a/iphone/Maps/de.lproj/Localizable.strings
+++ b/iphone/Maps/de.lproj/Localizable.strings
@@ -1791,3 +1791,6 @@
 
 /* january */
 "whatsnew_font_size_text" = "Bezeichnungen auf der Karte können vergrößert werden.";
+
+/* "Translation is no needed, because it's a company name" */
+"uber" = "Uber";
