--- a/iphone/Maps/en.lproj/Localizable.strings
+++ b/iphone/Maps/en.lproj/Localizable.strings
@@ -1791,3 +1791,6 @@
 
 /* january */
 "whatsnew_font_size_text" = "Labels on the map can be made bigger.";
+
+/* "Translation is no needed, because it's a company name" */
+"uber" = "Uber";
