--- a/iphone/Maps/fr.lproj/Localizable.strings
+++ b/iphone/Maps/fr.lproj/Localizable.strings
@@ -1791,3 +1791,6 @@
 
 /* january */
 "whatsnew_font_size_text" = "Les étiquettes sur la carte peuvent être agrandies.";
+
+/* "Translation is no needed, because it's a company name" */
+"uber" = "Uber";
