--- a/iphone/Maps/hu.lproj/Localizable.strings
+++ b/iphone/Maps/hu.lproj/Localizable.strings
@@ -1791,3 +1791,6 @@
 
 /* january */
 "whatsnew_font_size_text" = "A térképen a címkék lehetnek nagyobbak.";
+
+/* "Translation is no needed, because it's a company name" */
+"uber" = "Uber";
