--- a/iphone/Maps/ja.lproj/Localizable.strings
+++ b/iphone/Maps/ja.lproj/Localizable.strings
@@ -1791,3 +1791,6 @@
 
 /* january */
 "whatsnew_font_size_text" = "地図上のラベルを大きくすることができます。";
+
+/* "Translation is no needed, because it's a company name" */
+"uber" = "Uber";
