--- a/iphone/Maps/nl.lproj/Localizable.strings
+++ b/iphone/Maps/nl.lproj/Localizable.strings
@@ -1791,3 +1791,6 @@
 
 /* january */
 "whatsnew_font_size_text" = "Labels op de map kunnen groter gemaakt worden.";
+
+/* "Translation is no needed, because it's a company name" */
+"uber" = "Uber";
