--- a/iphone/Maps/pl.lproj/Localizable.strings
+++ b/iphone/Maps/pl.lproj/Localizable.strings
@@ -1791,3 +1791,6 @@
 
 /* january */
 "whatsnew_font_size_text" = "Etykiety na mapie dają się powiększyć.";
+
+/* "Translation is no needed, because it's a company name" */
+"uber" = "Uber";
