--- a/iphone/Maps/pt.lproj/Localizable.strings
+++ b/iphone/Maps/pt.lproj/Localizable.strings
@@ -1791,3 +1791,6 @@
 
 /* january */
 "whatsnew_font_size_text" = "É possível aumentar o tamanho das letras do mapa.";
+
+/* "Translation is no needed, because it's a company name" */
+"uber" = "Uber";
