--- a/iphone/Maps/sv.lproj/Localizable.strings
+++ b/iphone/Maps/sv.lproj/Localizable.strings
@@ -1791,3 +1791,6 @@
 
 /* january */
 "whatsnew_font_size_text" = "Etiketter på kartan kan göras större.";
+
+/* "Translation is no needed, because it's a company name" */
+"uber" = "Uber";
