--- a/iphone/Maps/vi.lproj/Localizable.strings
+++ b/iphone/Maps/vi.lproj/Localizable.strings
@@ -1791,3 +1791,6 @@
 
 /* january */
 "whatsnew_font_size_text" = "Các nhãn mác trên bản đồ có thể được phóng to hơn.";
+
+/* "Translation is no needed, because it's a company name" */
+"uber" = "Uber";
