--- a/iphone/Maps/zh-Hans.lproj/Localizable.strings
+++ b/iphone/Maps/zh-Hans.lproj/Localizable.strings
@@ -1791,3 +1791,6 @@
 
 /* january */
 "whatsnew_font_size_text" = "可以增大地图上的标签。";
+
+/* "Translation is no needed, because it's a company name" */
+"uber" = "Uber";
