--- a/iphone/Maps/zh-Hant.lproj/Localizable.strings
+++ b/iphone/Maps/zh-Hant.lproj/Localizable.strings
@@ -1791,3 +1791,6 @@
 
 /* january */
 "whatsnew_font_size_text" = "可將地圖上的標籤變大。";
+
+/* "Translation is no needed, because it's a company name" */
+"uber" = "Uber";
