Ran the script.

--- a/android/res/values-fi/strings.xml
+++ b/android/res/values-fi/strings.xml
@@ -1019,7 +1019,7 @@
 	<!-- december -->
 	<string name="whatsnew_traffic">Liikennetiedot 36 maassa</string>
 	<!-- december -->
-	<string name="whatsnew_traffic_text">Ενημερωμένες πληροφορίες για την κίνηση και για γρηγορότερες διαδρομές οδήγησης!</string>
+	<string name="whatsnew_traffic_text">Ajankohtaiset liikennetiedot ja parhaat ajoreitit sen perusteella!</string>
 	<!-- december -->
 	<string name="whatsnew_traffic_roaming">Liikennetiedot verkkovierailussa</string>
 	<!-- december -->
