--- a/iphone/Maps/fi.lproj/Localizable.strings
+++ b/iphone/Maps/fi.lproj/Localizable.strings
@@ -1760,7 +1760,7 @@
 "whatsnew_traffic" = "Liikennetiedot 36 maassa";
 
 /* december */
-"whatsnew_traffic_text" = "Ενημερωμένες πληροφορίες για την κίνηση και για γρηγορότερες διαδρομές οδήγησης!";
+"whatsnew_traffic_text" = "Ajankohtaiset liikennetiedot ja parhaat ajoreitit sen perusteella!";
 
 /* december */
 "whatsnew_traffic_roaming" = "Liikennetiedot verkkovierailussa";
