--- a/iphone/Maps/hu.lproj/Localizable.strings
+++ b/iphone/Maps/hu.lproj/Localizable.strings
@@ -1734,7 +1734,7 @@
 
 "banner_deliveryclub_title" = "Ételfutár";
 
-"banner_deliveryclub_message" = "Gyors házhozszállítás 4000 étteremből. Rendelés az Ételfutár Klubból.";
+"banner_deliveryclub_message" = "Gyors házhozszállítás 4000 étteremből. Rendelés a Delivery Club-ból.";
 
 "banner_lamoda_title" = "Online ruházati és cipő üzlet";
 
