--- a/iphone/Maps/tr.lproj/Localizable.strings
+++ b/iphone/Maps/tr.lproj/Localizable.strings
@@ -1734,7 +1734,7 @@
 
 "banner_deliveryclub_title" = "Gıda teslimatı";
 
-"banner_deliveryclub_message" = "4.000'den fazla restorandan hızlı teslimat. Siparişinizi Delivery Clup ile verin.";
+"banner_deliveryclub_message" = "4.000'den fazla restorandan hızlı teslimat. Siparişinizi Delivery Club ile verin.";
 
 "banner_lamoda_title" = "Çevrimiçi giyim ve ayakkabı mağazası";
 
