--- a/iphone/Maps/zh-Hans.lproj/Localizable.strings
+++ b/iphone/Maps/zh-Hans.lproj/Localizable.strings
@@ -1734,7 +1734,7 @@
 
 "banner_deliveryclub_title" = "送餐";
 
-"banner_deliveryclub_message" = "4,000 家餐厅的快速送餐。从送餐俱乐部订餐。";
+"banner_deliveryclub_message" = "4,000 家餐厅的快速送餐。从 Delivery Club 订餐。";
 
 "banner_lamoda_title" = "在线服装和鞋店";
 
