--- a/android/res/values-ru/strings.xml
+++ b/android/res/values-ru/strings.xml
@@ -333,7 +333,6 @@
 	<!-- Settings «Map» category: «Record track» title -->
 	<string name="pref_track_record_title">Недавний путь</string>
 	<string name="pref_map_auto_zoom">Автозум</string>
-	<string name="pref_traffic_simplified_colors_title">Простая цветовая схема для пробок</string>
 	<string name="duration_disabled">Выключено</string>
 	<string name="duration_1_hour">1 час</string>
 	<string name="duration_2_hours">2 часа</string>
@@ -1066,4 +1065,16 @@
 	<string name="booking_filter_rating_num_very_good">8.0+</string>
 	<!-- Nine points and higher -->
 	<string name="booking_filter_rating_num_excellent">9.0+</string>
+	<string name="pref_traffic_simplified_colors_title">Простые цвета пробок</string>
+	<string name="enable_logging">Включить запись логов</string>
+	<string name="whatsnew_more_info_on_hotels_title">Подробная информация об отелях</string>
+	<string name="whatsnew_more_info_on_hotels_message">Новые расширенные карточки гостиниц: смотрите фотографии, отзывы и другую информацию онлайн.</string>
+	<string name="whatsnew_better_routing_title">Улучшено построение маршрутов</string>
+	<string name="whatsnew_better_routing_message">• Более точная оценка времени в пути.\n• Учитываем знаки и запрещенные дороги при построении маршрута.</string>
+	<string name="whatsnew_smaller_mwm_title">Карты стали меньше</string>
+	<string name="whatsnew_smaller_mwm_message">Занимают на 20% меньше места на телефоне.</string>
+	<string name="whatsnew_waypoints_title">Маршруты с промежуточными точками</string>
+	<string name="whatsnew_waypoints_message">Нажмите на объекты, чтобы включить их в маршрут.</string>
+	<string name="whatsnew_driving_style_title">Новый автомобильный стиль карт</string>
+	<string name="whatsnew_driving_style_message">Режим автомобильной навигации стал удобнее.</string>
 </resources>
